--- a/config/2024/config.json
+++ b/config/2024/config.json
@@ -40,20 +40,6 @@
           "type": "number",
           "required": true,
           "code": "teamNumber"
-        },
-        {
-          "title": "Human Player at Amp",
-          "type": "boolean",
-          "required": false,
-          "defaultValue": false,
-          "code": "humanPlayer"
-        },
-        {
-          "title": "No Show",
-          "type": "boolean",
-          "defaultValue": false,
-          "required": false,
-          "code": "noShow"
         }
       ]
     },
@@ -76,32 +62,8 @@
           "required": false
         },
         {
-          "code": "auampm",
-          "title": "Amp Missed",
-          "type": "counter",
-          "defaultValue": 0,
-          "min": 0,
-          "required": false
-        },
-        {
           "code": "ausc",
           "title": "Speaker Scored",
-          "type": "counter",
-          "defaultValue": 0,
-          "min": 0,
-          "required": false
-        },
-        {
-          "code": "auskpm",
-          "title": "Speaker Missed",
-          "type": "counter",
-          "defaultValue": 0,
-          "min": 0,
-          "required": false
-        },
-        {
-          "code": "auf",
-          "title": "Auto Foul",
           "type": "counter",
           "defaultValue": 0,
           "min": 0,
@@ -128,42 +90,11 @@
           "required": false
         },
         {
-          "code": "tampm",
-          "title": "Amp Missed",
-          "type": "counter",
-          "defaultValue": 0,
-          "min": 0,
-          "required": false
-        },
-        {
           "code": "tsc",
           "title": "Speaker Scored",
           "type": "counter",
           "defaultValue": 0,
           "min": 0,
-          "required": false
-        },
-        {
-          "code": "tsm",
-          "title": "Speaker Missed",
-          "type": "counter",
-          "defaultValue": 0,
-          "min": 0,
-          "required": false
-        },
-        {
-          "code": "cn",
-          "title": "Note in Trap?",
-          "type": "counter",
-          "defaultValue": 0,
-          "min": 0,
-          "required": false
-        },
-        {
-          "code": "Fou/Tech",
-          "title": "Teleop Foul",
-          "type": "counter",
-          "defaultValue": 0,
           "required": false
         }
       ]
@@ -172,98 +103,71 @@
       "name": "Endgame",
       "fields": [
         {
-          "title": "End Position",
-          "type": "select",
-          "required": true,
-          "code": "epo",
-          "choices": {
-            "No": "No Climb",
-            "Fc": "Failed Climb",
-            "P": "Parked",
-            "Os": "Onstage",
-            "Sl": "Spotlight"
-          },
-          "defaultValue": "No Climb"
+          "title": "Parked",
+          "type": "boolean",
+          "required": false,
+          "defaultValue": false,
+          "code": "parked"
+          },  
+        {
+          "title": "Onstage",
+          "type": "boolean",
+          "required": false,
+          "defaultValue": false,
+          "code": "onstage"
         },
         {
           "title": "Harmony",
-          "type": "select",
-          "required": true,
-          "code": "harm",
-          "choices": {
-            "Not": "Not Completed",
-            "Fir": "First on Chain",
-            "Sec": "Second on Chain",
-            "Thir": "Third on Chain"
-          },
-          "defaultValue": "Not Completed"
-        }
+          "type": "boolean",
+          "required": false,
+          "defaultValue": false,
+          "code": "harmony"          
+        },
+       {
+          "title": "Note in Trap",
+          "type": "boolean",
+          "required": false,
+          "defaultValue": false,
+          "code": "trap"
+        } 
       ]
     },
     {
-      "name": "Postmatch",
+      "name": "Penalties",
       "fields": [
         {
-          "code": "or",
-          "title": "Offense Skill",
-          "type": "select",
-          "choices": {
-            "1": "Not Effective",
-            "2": "Average",
-            "3": "Very Effective",
-            "x": "Not Observed"
+         "title": "Fouls",
+          "code": "foul",
+          "type": "counter",
+          "defaultValue": 0,
+          "min": 0,
+          "required": false
+        },
+        {
+          "title": "Tech Fouls",
+          "code": "techfoul",
+          "type": "counter",
+          "defaultValue": 0,
+          "min": 0,
+          "required": false
           },
-          "required": false
-        },
-        {
-          "code": "dr",
-          "title": "Defense Skill",
-          "type": "select",
-          "choices": {
-            "1": "Not Effective",
-            "2": "Average",
-            "3": "Very Effective",
-            "x": "Not Observed"
-          },
-          "defaultValue": "x",
-          "required": false
-        },
-        {
-          "code": "d",
-          "title": "Died",
-          "type": "boolean",
-          "defaultValue": false,
-          "required": false
-        },
-        {
-          "code": "to",
-          "title": "Tipped Over",
-          "type": "boolean",
-          "defaultValue": false,
-          "required": false
-        },
         {
           "code": "yc",
-          "title": "Yellow/Red Card",
-          "type": "select",
-          "defaultValue": "No Card",
-          "required": true,
-          "choices": {
-            "No Card": "No Card",
-            "Yellow": "Yellow Card",
-            "Red": "Red Card"
-          }
-        },
-
-        {
-          "code": "co",
-          "title": "Comments",
-          "type": "text",
+          "title": "Yellow Card",
+          "type": "counter",
+          "defaultValue": 0,
           "min": 0,
-          "max": 50,
           "required": false
+          },
+       {
+          "code": "rc",
+          "title": "Red Card",
+          "type": "counter",
+          "defaultValue": 0,
+          "min": 0,
+          "required": false
+          }
+         ]
         }
       ]
     }
-  ]
-}
